test/fixtures/public/analysis/success/call_non_static_method_from_parent.jmm
import B;

class A extends B {
    public static void main(String[] args) {
        B.foo();
    }
    public int foo() {
        return 0;
    }
}
