test/fixtures/public/analysis/fail/true_call.jmm
class Class {
    public static void main(String[] args) {
        true.f();
    }
}